--- a/index.html
+++ b/index.html
@@ -422,55 +422,55 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="button modal-close-button"  data-modal-close>
-                <svg class="modal-exit"  width="30" height="30">
-                    <use href="./images/spriten.svg#close" class="modal-use"></use></svg>
+            <button class="modal__close-button"  data-modal-close>
+                <svg width="30" height="30">
+                    <use href="./images/spriten.svg#close" ></use></svg>
             </button>
 
-            <p>Залиште свої дані, ми вам передзвонимо</p>
-            <form name="registration-form" autocomplete="on"  class="modal-form">
-                <label class="modal-label">
-                    <span class="modal-text">Ім'я</span>
-                    <span class="modal-input-zone">
-                        <input type="text" name="name" class="modal-field" required>
-                        <svg width="18" height="18" class="modal-icon">
+            <p class="modal__text">Залиште свої дані, ми вам передзвонимо</p>
+            <form name="registration-form" autocomplete="on"  class="modal__form">
+                <label class="modal__label">
+                    <span class="modal__area-name">Ім'я</span>
+                    <span class="modal__field">
+                        <input type="text" name="name" class="modal__input" required>
+                        <svg width="18" height="18" class="modal__icon">
                             <use href="./images/sprite.svg#person-black">
                             </use>
                         </svg>
                     </span>
                 </label>
-                <label class="modal-label">
-                    <span class="modal-text">Телефон</span>
-                    <span class="modal-input-zone">
-                        <input type="tel" name="telephone" class="modal-field" required>
-                        <svg width="18" height="18" class="modal-icon">
+                <label class="modal__label">
+                    <span class="modal__area-name">Телефон</span>
+                    <span class="modal__field">
+                        <input type="tel" name="telephone" class="modal__input" required>
+                        <svg width="18" height="18" class="modal__icon">
                             <use href="./images/sprite.svg#phone-black">
                             </use>
                         </svg>
                     </span>
                 </label>
-                <label class="modal-label">
-                    <span class="modal-text">Пошта</span>
-                    <span class="modal-input-zone">
-                        <input type="email" name="E-mail" class="modal-field" required>
-                        <svg width="18" height="18" class="modal-icon">
+                <label class="modal__label">
+                    <span class="modal__area-name">Пошта</span>
+                    <span class="modal__field">
+                        <input type="email" name="E-mail" class="modal__input" required>
+                        <svg width="18" height="18" class="modal__icon">
                             <use href="./images/sprite.svg#email-black">
                             </use>
                         </svg>
                     </span>
                 </label>
-                <label class="modal-label modal-label-comment">
-                    <span class="modal-text">Коментар</span>
-                    <textarea name="user-comment" class="modal-field-comment" placeholder="Введіть текст" rows="5"></textarea>
+                <label class="modal__label modal__label--comment">
+                    <span class="modal__area-name">Коментар</span>
+                    <textarea name="user-comment" class="modal__input--comment" placeholder="Введіть текст" rows="5"></textarea>
                 </label>
-                <label class="modal-agreement-check">
-                    <input type="checkbox" class="modal-checkbox" required>
-                        <svg width="16" height="15" class="check-icon">
+                <label class="modal__agreement-check">
+                    <input type="checkbox" class="modal__checkbox" required>
+                        <svg width="16" height="15" class="check__icon">
                             <use href="./images/sprite.svg#check"></use>
                         </svg>
-                    <span>Погоджуюся з розсилкою та приймаю <a href="#" class="link-agreement">Умови договору</a></span> 
+                    <span>Погоджуюся з розсилкою та приймаю <a href="#" class="modal__link-agreement">Умови договору</a></span> 
                 </label>
-                <button type="submit" class="modal-button">Відправити</button>
+                <button type="submit" class="modal__button">Відправити</button>
             </form>
         </div>
     </div>
