--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 
-
-    <link rel="stylesheet" href="./css/Styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <!-- <link rel="stylesheet" href="./css/Styles.css"> -->
 </head>
 
 <body>
