do SASS for index

--- a/index.html
+++ b/index.html
@@ -373,28 +373,28 @@
                 <ul class="list invite__list">
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#instagram" width="20px" height="20px"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#twitter" width="20px" height="20px"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#facebook" width="20px" height="20px"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#linkedin" width="20px" height="20px"></use>
                             </svg>
                         </a>
@@ -465,7 +465,7 @@
                 </label>
                 <label class="modal__agreement-check">
                     <input type="checkbox" class="modal__checkbox" required>
-                        <svg width="16" height="15" class="check__icon">
+                        <svg width="16" height="15" class="modal__check-icon">
                             <use href="./images/sprite.svg#check"></use>
                         </svg>
                     <span>Погоджуюся з розсилкою та приймаю <a href="#" class="modal__link-agreement">Умови договору</a></span> 
