--- a/portfolio.html
+++ b/portfolio.html
@@ -238,28 +238,28 @@
                 <ul class="list invite__list">
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#instagram" width="20px" height="20px"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#twitter" width="20px" height="20px"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#facebook" width="20px" height="20px"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="invite__link">
-                            <svg class="icon-foot">
+                            <svg class="invite__icon">
                                 <use href="./images/sprite.svg#linkedin" width="20px" height="20px"></use>
                             </svg>
                         </a>
